# "Average" example, an overview of ELEMENTS
add_subdirectory(average)

# "VTK" example, demonstration of visualization using VTK/Paraview
add_subdirectory(vtk)

# "Projection" example, demonstration of projection of
# function onto higher-order basis and plotting with Paraview
#add_subdirectory(projection)
